# yolox_onnxruntime_Cpp

./: CMakeLists.txt  README.md  obj_infer.cpp
img/: README.md
lite.ai.toolkit/include/lite/: config.h
lite.ai.toolkit/include/lite/ort/cv/: yolov5_blazeface.h
lite.ai.toolkit/lib/: liblite.ai.toolkit.so.0.1.1  libopencv_calib3d.so.4.5.2  libopencv_highgui.so.4.5.2  libopencv_objdetect.so.4.5.2  libopencv_video.so.4.5  libopencv_videoio.so.4.5
model/: README.md
